# cadquery-server

./: .gitignore  Dockerfile  LICENSE  README.md  index.html  pyproject.toml  screencast.md  screencast.py
.github/workflows/: main.yml
cadquery-server/: .dockerignore  Dockerfile  README.md  pyproject.toml
cadquery-server/cadquery_server/: server.py
cadquery-server/src/: cli.py  module_manager.py  server.py
cq-view/: index.html
cq-viewer/: index.html
cq_server/: __init__.py  cli.py  exporter.py  module_manager.py  renderers.py  server.py  ui.py
cq_server/static/: index.css  viewer.css  viewer.js
cq_server/templates/: index.html  viewer.html  viewer_static.html
docker/: Dockerfile  run.py
docs/: index.html
docs/js/: cq_tutorial.js
docs/stl/: cq_tutorial.stl
examples/: .cqsignore  asm.py  box.py  cq_tutorial.py  cube.json  test.py
src/: cli.py  module_manager.py  server.py
src/static/: viewer.css  viewer.js
src/templates/: viewer.html
tools/: autoscreencast.py  screencast.md
