[tool.poetry]
name = "cadquery-server"
version = "0.1.5"
description = "A web server that executes a given CadQuery code and returns the generated model as a threejs object."
license = "MIT"
authors = ["Roipoussiere"]
readme = "./README.md"
homepage = "https://open-vsx.org/extension/roipoussiere/cadquery"
repository = "https://framagit.org/roipoussiere/cadquery-vscode"
keywords = ["cad", "cadquery", "3d", "parametric", "modeling"]
packages = [
    { include = "src" }
]
classifiers = [
    "Framework :: Flask",
    "Topic :: Multimedia :: Graphics :: 3D Modeling"
]

[tool.poetry.dependencies]
python = "^3.8"
jupyter-cadquery = "^3.0.0"
cadquery-massembly = "^0.9.0"
matplotlib = "^3.5.1"
Flask = "^2.1.1"

[tool.poetry.scripts]
cq-server = "src.server:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
